--- a/css/pacman.css
+++ b/css/pacman.css
@@ -60,7 +60,7 @@ a:visited {
 }
 
 .lsb {
-	background: url(../resources/nav_logo13.png) bottom;
+	background: url(/resources/nav_logo13.png) bottom;
 	font: 15px arial, sans-serif;
 	border: none;
 	cursor: pointer;
@@ -75,7 +75,7 @@ a:visited {
 }
 
 #logo {
-	background: black url(../resources/pacman10-hp.gif) 0 0 no-repeat;
+	background: black url(/resources/pacman10-hp.gif) 0 0 no-repeat;
 	position: relative;
 	margin-bottom: 9px
 }
