--- a/css/pacman.css
+++ b/css/pacman.css
@@ -61,9 +61,10 @@ a:visited {
 }
 
 .lsb {
-	background: url(https://cdagaming.github.io/resources/nav_logo13.png) bottom;
-	font: 15px arial, sans-serif;
+	background-color: #0275d8;
+	font-size: 15px;
 	border: none;
+	padding: .5rem 1rem;
 	cursor: pointer;
 	height: 30px;
 	margin: 0;
@@ -72,7 +73,8 @@ a:visited {
 }
 
 .lsb:active {
-	background: #ccc
+	background-color: #025aa5;
+	padding: .5rem 1rem;
 }
 
 #logo {
