--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3061,8 +3061,8 @@ tbody.collapse.show {
   display: inline-block;
   width: 0;
   height: 0;
-  margin-left: 0.3em;
-  vertical-align: middle;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
   content: "";
   border-top: 0.3em solid;
   border-right: 0.3em solid transparent;
